Okay gotta delete some program files

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "SomeDefaultConnection": "Server=localhost;Port=3307;Database=cm_db;User=cm_user;Password=CockyMoviePassword;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
+
+ 
+
